--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -1,6 +1,9 @@
 name: 'Dependency Review'
-on: [pull_request]
-
+on:
+  push:
+    # Sequence of patterns matched against refs/heads
+    branches:    
+      - fix-dependabot-security
 permissions:
   contents: read
 
